--- a/code/API_definitions/BYON-Webrtc-Events.yaml
+++ b/code/API_definitions/BYON-Webrtc-Events.yaml
@@ -172,17 +172,11 @@ externalDocs:
   description: Product documentation at CAMARA
   url: https://github.com/camaraproject/
 servers:
-  - url: "{apiRoot}/webrtc-events/v1"
+  - url: "{apiRoot}/webrtc-events/vwip"
     variables:
       apiRoot:
         default: http://localhost:9091
         description: API root
-      deviceId:
-        description: >-
-          The notification channel creation is specific to a device instance,
-          the device-id in the uuid format (rfc4412) shall be included in the
-          request
-        default: deviceId
 tags:
   - name: webrtc-events Subscription
     description: Operations to manage event subscriptions for WebRTC APIs (BYON and RACM)
@@ -846,6 +840,8 @@ components:
         - vvoipSessionID
       type: object
       properties:
+        subscriptionId:
+          $ref: "#/components/schemas/SubscriptionId"
         originatorAddress:
           type: string
           description: Sender (originator) address
