--- a/code/API_definitions/webrtc-registration.yaml
+++ b/code/API_definitions/webrtc-registration.yaml
@@ -18,6 +18,8 @@ info:
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
+  version: vwip
+  x-camara-commonalities: 0.5.0
 servers:
   - url: '{apiRoot}/webrtc-registration/vwip'
     description: APIs to manage Client Registration and Connection
