--- a/code/API_definitions/webrtc-registration.yaml
+++ b/code/API_definitions/webrtc-registration.yaml
@@ -40,7 +40,7 @@ paths:
         - $ref: '#/components/parameters/hdrTransactionId'
       security:
         - openId:
-            - webrtc-registration:write
+            - webrtc-registration:sessions:create
       requestBody:
         content:
           application/json:
@@ -69,7 +69,7 @@ paths:
         - $ref: '#/components/parameters/pathParamRacmSessionId'
       security:
         - openId:
-            - webrtc-registration:write
+            - webrtc-registration:sessions:write
       responses:
         '200':
           description: No Content
@@ -84,7 +84,7 @@ paths:
         - $ref: '#/components/parameters/pathParamRacmSessionId'
       security:
         - openId:
-            - webrtc-registration:delete
+            - webrtc-registration:sessions:delete
       responses:
         '204':
           description: No Content
